# Rewards

./: .dockerignore  .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml  test.yml
infra/: Dockerfile  cloudrun.yaml  secrets.example.env
src/: __init__.py  main.py
src/api/: __init__.py  routes.py
src/audit/: __init__.py  audit_log.py
src/auth/: __init__.py  jwt_verifier.py
src/db/: __init__.py  connection.py  models.py
src/db/migrations/: env.py
src/db/migrations/versions/: 001_initial_schema.py
src/ledger/: __init__.py  models.py  transactions.py
src/policy_engine/: __init__.py  categories.py  snap_policy_engine.py  upc_classifier.py
src/stripe_integration/: __init__.py  connect.py  webhooks.py
tests/: __init__.py  conftest.py  test_api.py  test_ledger.py  test_policy.py  test_stripe.py
